# harmony_smart_table

./: LICENSE  README.md  build.py  bundle-lock.json  bundle.json  ohos_config.json  select_product.json  subsystems_product.json
.deveco/: deveco.ini
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/B3_basic_pwm_led/: BUILD.gn  README.md  pwm_example.c
applications/sample/wifi-iot/app/D12_iot_cloud_oc_agriculture copy/: BUILD.gn  iot_cloud_oc_sample.c
applications/sample/wifi-iot/app/D1_iot_wifi_ap/: BUILD.gn  wifi_ap.c
applications/sample/wifi-iot/app/D2_iot_wifi_sta_connect/: BUILD.gn  Wifi_sta_connect.c
applications/sample/wifi-iot/app/D6_iot_cloud_oc/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/sample/wifi-iot/app/D6_iot_cloud_oc/include/: oc_mqtt.h  oc_mqtt_profile_package.h
applications/sample/wifi-iot/app/D6_iot_cloud_oc/src/: E53_IA1.c  oc_mqtt.c  oc_mqtt_profile_package.c
applications/sample/wifi-iot/app/SmartTable/: BUILD.gn  iot_cloud_oc_sample.c
applications/sample/wifi-iot/app/SmartTable/include/: SmartTable_Reset.h  SmartTable_Sysinfo.h
applications/sample/wifi-iot/app/SmartTable/src/: SmartTable_Reset.c  SmartTable_Sysinfo.c
applications/sample/wifi-iot/app/allinone/: BUILD.gn  allinone bak.c  allinone.c
applications/sample/wifi-iot/app/demolink/: BUILD.gn
applications/sample/wifi-iot/app/fan/: BUILD.gn
applications/sample/wifi-iot/app/fan/include/: E53_IA1.h  defines.h  fan.h  iot_hal.h  led.h  netcfg.h  network_config_service.h
applications/sample/wifi-iot/app/fan/src/: E53_IA1.c  fan.c  iot_hal.c  led.c  netcfg.c
applications/sample/wifi-iot/app/iothardware/: BUILD.gn  SPI_test.c  Timer_example.c  app_demo_sysinfo.c  beep_app.c  beep_app_only.c  child_app.c  child_press3s copy 2.c  child_press3s.c  fan_test.c  helloworld.c  led_app copy.c  led_app.c  test.c  timer_test.c  traffic_light_demo copy.c  traffic_light_demo.c
applications/sample/wifi-iot/app/iothardware/include/: beep_only.h  led_app.h  table_app.h
applications/sample/wifi-iot/app/mqtt_demo/: BUILD.gn  mqtt_test.c  mqtt_test.h
applications/sample/wifi-iot/app/music_app/: BUILD.gn  music_app.c
applications/sample/wifi-iot/app/music_app/include/: music.h
applications/sample/wifi-iot/app/my_first_app/: BUILD.gn
applications/sample/wifi-iot/app/my_led/: BUILD.gn  led_example.c
applications/sample/wifi-iot/app/nfc_ljn/: BUILD.gn  README.md  i2c_example.c  i2c_example1.c  nfc_ljn.h
applications/sample/wifi-iot/app/nfc_ljn/nfc/: NT3H.c  NT3H.h  nfc.c  nfc.h
applications/sample/wifi-iot/app/nfc_ljn/nfc/ndef/: ndef.c  ndef.h
applications/sample/wifi-iot/app/nfc_ljn/nfc/ndef/rtd/: nfcForum.c  nfcForum.h  rtdText.c  rtdText.h  rtdTypes.h  rtdUri.c  rtdUri.h
applications/sample/wifi-iot/app/samgr/: bootstrap_example.c  broadcast_example.c  example.h  feature_example.c
applications/sample/wifi-iot/app/startup/: BUILD.gn  app_demo_sysinfo.c  app_demo_sysinfo.h
applications/sample/wifi-iot/app/wendu/: BUILD.gn  wendu.c  wendu.h  wendu_app.c
base/hiviewdfx/services/hiview_lite/: README.md  bundle.json  hiview_service.c  hiview_service.h
base/hiviewdfx/utils/lite/: hiview_cache.c  hiview_config.c  hiview_config.h  hiview_file.c  hiview_file.h  hiview_util.c
base/iot_hardware/: README.md  bundle.json
base/iot_hardware/hals/wifiiot_lite/: hal_lowpower.h  hal_wifiiot_adc.h  hal_wifiiot_flash_ex.h  hal_wifiiot_gpio_ex.h  hal_wifiiot_i2c.h  hal_wifiiot_i2c_ex.h  hal_wifiiot_kal.h  hal_wifiiot_partition.h
base/startup/: README.md  bundle.json
base/startup/hals/syspara_lite/: hal_sys_param.h
base/startup/services/bootstrap_lite/: README.md
foundation/communication/: README.md  bundle.json
foundation/distributedschedule/: README.md  bundle.json
iot/link/: BUILD.gn  README.md  README_CN.md  bundle.json
iot/link/demolink/: BUILD.gn  demosdk_adapter.c  demosdk_adapter.h
iot/link/libbuild/: BUILD.gn  demosdk.h
kernel/liteos_m/arch/: BUILD.gn
kernel/liteos_m/components/: BUILD.gn
kernel/liteos_m/components/cmsis/: cmsis_liteos.c  cmsis_os.h
kernel/liteos_m/components/kal/: BUILD.gn
kernel/liteos_m/kernel/: BUILD.gn
kernel/liteos_m/kernel/base/: BUILD.gn
kernel/liteos_m/kernel/extended/: BUILD.gn
kernel/liteos_m/kernel/include/: los_base.h  los_config.h  los_cpup.h  los_err.h  los_errno.h  los_event.h  los_list.h  los_membox.h  los_memcheck.h  los_queue.h  los_slab.h  los_sys.h  los_tables.h  los_task.h  los_tickless.h  los_trace.h  los_typedef.h
ohos_bundles/.output/@ohos/hpm_cli_notice/: Third Party Open Source Notice
ohos_bundles/@ohos/bootstrap/: BUILD.gn  bundle.json
ohos_bundles/@ohos/bootstrap/source/: core_main.h  system_init.c
ohos_bundles/@ohos/gcc_riscv32/: README.md  bundle.json
ohos_bundles/@ohos/gcc_riscv32/scripts/: install.sh
ohos_bundles/@ohos/gn/: README.md  bundle.json  gn.tar
ohos_bundles/@ohos/gn/gn/: gn
ohos_bundles/@ohos/gn/scripts/: install.sh  uninstall.sh
ohos_bundles/@ohos/hi3861/: BUILD.gn  non_factory.mk
ohos_bundles/@ohos/hi3861/include/: hi_net_api.h
ohos_bundles/@ohos/hi3861/license/: LICENSE
ohos_bundles/@ohos/hi3861_adapter/: README.md  bundle.json
ohos_bundles/@ohos/hichainsdk/: README.md  bundle.json
ohos_bundles/@ohos/hilog_m/: README.md  bundle.json
ohos_bundles/@ohos/hiview/: README.md
ohos_bundles/@ohos/ninja/: COPYING  README.md  bundle.json  ninja.tar
ohos_bundles/@ohos/ninja/ninja/: ninja
ohos_bundles/@ohos/ninja/scripts/: install.sh
ohos_bundles/@ohos/token/: README.md  bundle.json
ohos_bundles/@ohos/utils/: README.md  bundle.json
ohos_bundles/@ohos/wifi_iot/: README.md  bundle.json  product.template.json
ohos_bundles/@ohos/wifi_iot/dist_scripts/: connect_subsystem.js  parse_platform_hpm.js  select_product.js
ohos_bundles/@ohos/wifi_iot_sample_app/: bundle.json
ohos_bundles/@ohos/wifi_iot_sample_app/app/: BUILD.gn
ohos_bundles/@ohos/wlan/: README.md  bundle.json
ohos_bundles/@ohos/xts/: README.md
test/: bundle.json
test/xdevice/: setup.py
test/xdevice/config/: acts.json
(+540 files in other folders)
