import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #"my_first_app:myapp",
        #"my_led:my_led",
        # "fan:fan",
        # "D1_iot_wifi_ap:wifi_ap",
        #"D2_iot_wifi_sta_connect:Wifi_sta_connect",
        #"demolink:example_demolink",
        # "startup:startup",
        # "wendu:wendu",
        #"music_app:music_app",
        #"demo111:demo111",
        "iothardware:iot_hardware",
        "easy_wifi:easy_wifi",
        "allinone:allinone",
        "nfc_ljn:nfc_example",
        "mqtt_demo:mqtt_test_at",
        # "B3_basic_pwm_led:pwm_example",
        
    ]
}