static_library("Wifi_sta_connect") {
    sources = [
        "Wifi_sta_connect.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",


    ]


}